--- a/MAVLinkDashboard/index.html
+++ b/MAVLinkDashboard/index.html
@@ -39,6 +39,11 @@
         .builder-sidebar_search {
             display: none;
         }
+
+        .monaco-editor {
+            position: absolute !important;
+        }
+
     </style>
 
 </head>
@@ -47,7 +52,7 @@
 
     <div id="dashboard" class="grid-stack" style="background-color:#ffffff; flex:1;"></div>
 
-    <div id="edit_overlay" style="position:fixed; top:0; left:0; bottom:0; right:0; background-color:rgba(255,255,255,0.7); z-index:999; padding:1%; visibility:hidden">
+    <div id="edit_overlay" style="position:fixed; top:0; left:0; bottom:0; right:0; background-color:rgba(255,255,255,0.7); z-index:999; padding:1%; display:none">
         <div style="display:flex; flex-direction:column; width:100%; height:100%; background-color:#000; border-radius: 4px; padding: 5px 9px;">
             <div style="display:flex; justify-content: right; align-items: center; width:100%; height:2em; padding:2px; box-sizing:border-box;">
                 <span id="NameSpan" style="position:fixed; color:white; left:calc(2% + 10px); font-size:1.2em;">Widget Editor</span>
