--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -49,6 +49,19 @@ ArduPilot 4.2 filter setup.
                 <table>
                 <tr>
                 <td>
+                        <fieldset style="width:200px;height:80px">
+                        <legend>FFT Settings</legend>
+                        <table>
+                                <td style="width: 125px;">
+                                <label for="FFTWindow_size">Window size</label>
+                                </td>
+                                <td>
+                                <input id="FFTWindow_size" name="FFTWindow_size" type="number" min="1" step="1" value="512" onchange="window_size_inc(event); clear_calculation()" style="width:50px"/>
+                                </td>
+                        </table>
+                        </fieldset>
+                </td>
+                <td>
                 <fieldset style="width:200px;height:80px">
                         <legend>Axis</legend>
                         <input type="radio" id="type_Roll" name="Axis">
@@ -310,7 +323,7 @@ ArduPilot 4.2 filter setup.
 
   var calc_btn = document.getElementById('calculate');
   calc_btn.onclick = function() {
-      calculate_filter();
+      calculate_freq_resp();
   }
   //var clear_btn = document.getElementById('clear_cookies');
   //clear_btn.onclick = function() {
