AnalyticTune: add attitude controller calculations

--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -200,6 +200,9 @@ ArduPilot 4.2 filter setup.
                                 <input id="ATC_ANG_RLL_P" name="ATC_ANG_XXX_P" type="number" step="0.1" value="4.5"/>
                         </p>
                         <p>
+                                <input id="ATC_RAT_RLL_FF" name="ATC_RAT_XXX_FF" type="number" step="0.01" value="0.0"/>
+                        </p>
+                        <p>
                                 <input id="ATC_RAT_RLL_P" name="ATC_RAT_XXX_P" type="number" step="0.01" value="0.288"/>
                         </p>
                         <p>
