--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -184,14 +184,18 @@ ArduPilot 4.2 filter setup.
         </fieldset>
         </td>
         </tr>
-        </table>
-        <fieldset style="max-width:1200px">
-                <legend>Loop Rate</legend>
-                       <p>
-                                <input id="SCHED_LOOP_RATE" name="SCHED_LOOP_RATE" type="number" step="1" value="400" data-paramValues="false"/>
-                        </p>
-                </fieldset>
-                <fieldset style="max-width:1200px">
+</table>
+<fieldset style="max-width:1200px">
+        <legend>Loop Rate</legend>
+                <p>
+                        <input id="SCHED_LOOP_RATE" name="SCHED_LOOP_RATE" type="number" step="1" value="400" data-paramValues="false"/>
+                </p>
+</fieldset>
+
+<table>
+        <tr>
+        <td>
+        <fieldset style="width:580px">
                 <legend>Attitude Controller Parameters</legend>
                         <p>
                                 <input id="ATC_INPUT_TC" name="ATC_INPUT_TC" type="number" step="0.01" value="0.15"/>
@@ -220,8 +224,40 @@ ArduPilot 4.2 filter setup.
                         <p>
                                 <input id="ATC_RAT_RLL_FLTD" name="ATC_RAT_XXX_FLTD" type="number" step="0.01" value="20"/>
                         </p>
-                </fieldset>
-        
+        </fieldset>
+        </td>
+        <td>
+        <fieldset style="width:580px">
+                <legend>Attitude Controller Notch Parameters</legend>
+                        <p>
+                                <input id="ATC_RAT_RLL_NTF" name="ATC_RAT_RLL_NTF" type="number" step="1" value="1" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="NTF_FILT_FREQ" name="NTF_FILT_FREQ" type="number" step="0.1" value="150" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="NTF_FILT_Q" name="NTF_FILT_Q" type="number" step="0.1" value="75" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="NTF_FILT_ATT" name="NTF_FILT_ATT" type="number" step="0.1" value="40" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="ATC_RAT_RLL_NEF" name="ATC_RAT_RLL_NEF" type="number" step="1" value="1" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="NEF_FILT_FREQ" name="NEF_FILT_FREQ" type="number" step="0.1" value="150" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="NEF_FILT_Q" name="NEF_FILT_Q" type="number" step="0.1" value="75" style="width: 100px"/>
+                        </p>
+                        <p>
+                                <input id="NEF_FILT_ATT" name="NEF_FILT_ATT" type="number" step="0.1" value="40" style="width: 100px"/>
+                        </p>
+        </fieldset>
+        </td>
+        </tr>
+</table>
+
 <fieldset style="max-width:1200px" id="Throttle_input">
         <legend>Throttle Based</legend>
               <p>
