FilterReview: support per motor thottle notch.

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -11,6 +11,7 @@
 <script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 <script type="text/javascript" src="FilterReview.js"></script>
+<script type="text/javascript" src="Atmosphere_model.js"></script>
 <script type="text/javascript" src="../Libraries/DecodeDevID.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
