FilterReview: move tracking classes into there own files

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -11,7 +11,16 @@
 <script src="../modules/build/tippyjs/dist/tippy-bundle.umd.min.js"></script>
 
 <script type="text/javascript" src="FilterReview.js"></script>
-<script type="text/javascript" src="Atmosphere_model.js"></script>
+
+<script type="text/javascript" src="tracking/Atmosphere_model.js"></script>
+<script type="text/javascript" src="tracking/BaseClass.js"></script>
+<script type="text/javascript" src="tracking/Static.js"></script>
+<script type="text/javascript" src="tracking/Throttle.js"></script>
+<script type="text/javascript" src="tracking/RPM.js"></script>
+<script type="text/javascript" src="tracking/ESC.js"></script>
+<script type="text/javascript" src="tracking/FFT.js"></script>
+<script type="text/javascript" src="tracking/Logged.js"></script>
+
 <script type="text/javascript" src="../Libraries/DecodeDevID.js"></script>
 <script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
