--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -104,6 +104,7 @@ ArduPilot 4.2 filter setup.
   <button class="styleClass" onclick="document.getElementById('param_file').click()">Load Parameters</button>
   <input type='file' id="param_file" style="display:none" onchange="load_parameters(this.files[0]);">
   <input type="button" id="GetLink" value="Get Link" onclick="get_link();">
+</p>
 
   <form id="params" action="">
 
@@ -111,10 +112,10 @@ ArduPilot 4.2 filter setup.
   <legend>INS Settings</legend>
         <p>
                 <label for="GyroSampleRate">Gyro Sample Rate</label>
-                <input id="GyroSampleRate" name="GyroSampleRate" type="number" step="1" value="2000"/>
+                <input id="GyroSampleRate" name="GyroSampleRate" type="number" step="1" value="2000" onchange = "calculate_freq_resp()"/>
 	</p>
         <p>
-                <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0" style="width: 100px"/>
+                <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0" style="width: 100px" onchange = "calculate_freq_resp()"/>
 	</p>
 </fieldset>
 <table>
@@ -123,31 +124,31 @@ ArduPilot 4.2 filter setup.
         <fieldset style="width:580px">
             <legend>First Notch Filter</legend>
             <p>
-                <input id="INS_HNTCH_ENABLE" name="INS_HNTCH_ENABLE" type="number" step="1" value="1" style="width: 100px" onchange="update_hidden(this.id)"/>
+                <input id="INS_HNTCH_ENABLE" name="INS_HNTCH_ENABLE" type="number" step="1" value="1" style="width: 100px" onchange="update_hidden(this.id); calculate_freq_resp();"/>
             </p>
             <p>
-                <input id="INS_HNTCH_MODE" name="INS_HNTCH_MODE" type="number" step="1" value="1" style="width: 100px" onchange="update_hidden_mode()"/>
+                <input id="INS_HNTCH_MODE" name="INS_HNTCH_MODE" type="number" step="1" value="1" style="width: 100px" onchange="update_hidden_mode(); calculate_freq_resp();"/>
             </p>
             <p>
-                <input id="INS_HNTCH_FREQ" name="INS_HNTCH_FREQ" type="number" step="0.1" value="150" style="width: 100px"/>
+                <input id="INS_HNTCH_FREQ" name="INS_HNTCH_FREQ" type="number" step="0.1" value="150" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTCH_BW" name="INS_HNTCH_BW" type="number" step="0.1" value="75" style="width: 100px"/>
+                <input id="INS_HNTCH_BW" name="INS_HNTCH_BW" type="number" step="0.1" value="75" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTCH_ATT" name="INS_HNTCH_ATT" type="number" step="0.1" value="40" style="width: 100px"/>
+                <input id="INS_HNTCH_ATT" name="INS_HNTCH_ATT" type="number" step="0.1" value="40" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTCH_REF" name="INS_HNTCH_REF" type="number" step="0.01" value="0.29" style="width: 100px"/>
+                <input id="INS_HNTCH_REF" name="INS_HNTCH_REF" type="number" step="0.01" value="0.29" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTCH_FM_RAT" name="INS_HNTCH_FM_RAT" type="number" step="0.01" value="0" style="width: 100px"/>
+                <input id="INS_HNTCH_FM_RAT" name="INS_HNTCH_FM_RAT" type="number" step="0.01" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTCH_HMNCS" name="INS_HNTCH_HMNCS" type="number" step="1" value="3" style="width: 100px"/>
+                <input id="INS_HNTCH_HMNCS" name="INS_HNTCH_HMNCS" type="number" step="1" value="3" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTCH_OPTS" name="INS_HNTCH_OPTS" type="number" step="1" value="0" style="width: 100px"/>
+                <input id="INS_HNTCH_OPTS" name="INS_HNTCH_OPTS" type="number" step="1" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
         </fieldset>
         </td>
@@ -155,31 +156,31 @@ ArduPilot 4.2 filter setup.
         <fieldset style="width:580px">
             <legend>Second Notch Filter</legend>
             <p>
-                <input id="INS_HNTC2_ENABLE" name="INS_HNTC2_ENABLE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden(this.id)"/>
+                <input id="INS_HNTC2_ENABLE" name="INS_HNTC2_ENABLE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden(this.id); calculate_freq_resp();"/>
             </p>
             <p>
-                <input id="INS_HNTC2_MODE" name="INS_HNTC2_MODE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden_mode()"/>
+                <input id="INS_HNTC2_MODE" name="INS_HNTC2_MODE" type="number" step="1" value="0" style="width: 100px" onchange="update_hidden_mode(); calculate_freq_resp();"/>
             </p>
             <p>
-                <input id="INS_HNTC2_FREQ" name="INS_HNTC2_FREQ" type="number" step="0.1" value="0"style="width: 100px"/>
+                <input id="INS_HNTC2_FREQ" name="INS_HNTC2_FREQ" type="number" step="0.1" value="0"style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTC2_BW" name="INS_HNTC2_BW" type="number" step="0.1" value="0" style="width: 100px"/>
+                <input id="INS_HNTC2_BW" name="INS_HNTC2_BW" type="number" step="0.1" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTC2_ATT" name="INS_HNTC2_ATT" type="number" step="0.1" value="0" style="width: 100px"/>
+                <input id="INS_HNTC2_ATT" name="INS_HNTC2_ATT" type="number" step="0.1" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTC2_REF" name="INS_HNTC2_REF" type="number" step="0.01" value="0" style="width: 100px"/>
+                <input id="INS_HNTC2_REF" name="INS_HNTC2_REF" type="number" step="0.01" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTC2_FM_RAT" name="INS_HNTC2_FM_RAT" type="number" step="0.01" value="0" style="width: 100px"/>
+                <input id="INS_HNTC2_FM_RAT" name="INS_HNTC2_FM_RAT" type="number" step="0.01" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTC2_HMNCS" name="INS_HNTC2_HMNCS" type="number" step="1" value="0" style="width: 100px"/>
+                <input id="INS_HNTC2_HMNCS" name="INS_HNTC2_HMNCS" type="number" step="1" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
             <p>
-                <input id="INS_HNTC2_OPTS" name="INS_HNTC2_OPTS" type="number" step="1" value="0" style="width: 100px"/>
+                <input id="INS_HNTC2_OPTS" name="INS_HNTC2_OPTS" type="number" step="1" value="0" style="width: 100px" onchange = "calculate_freq_resp()"/>
             </p>
         </fieldset>
         </td>
@@ -198,31 +199,31 @@ ArduPilot 4.2 filter setup.
         <fieldset style="width:580px">
                 <legend>Attitude Controller Parameters</legend>
                         <p>
-                                <input id="ATC_INPUT_TC" name="ATC_INPUT_TC" type="number" step="0.01" value="0.15"/>
+                                <input id="ATC_INPUT_TC" name="ATC_INPUT_TC" type="number" step="0.01" value="0.15" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_ANG_RLL_P" name="ATC_ANG_XXX_P" type="number" step="0.1" value="4.5"/>
+                                <input id="ATC_ANG_RLL_P" name="ATC_ANG_XXX_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_FF" name="ATC_RAT_XXX_FF" type="number" step="0.01" value="0.0"/>
+                                <input id="ATC_RAT_RLL_FF" name="ATC_RAT_XXX_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_P" name="ATC_RAT_XXX_P" type="number" step="0.01" value="0.288"/>
+                                <input id="ATC_RAT_RLL_P" name="ATC_RAT_XXX_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_I" name="ATC_RAT_XXX_I" type="number" step="0.01" value="0.288"/>
+                                <input id="ATC_RAT_RLL_I" name="ATC_RAT_XXX_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_D" name="ATC_RAT_XXX_D" type="number" step="0.0001" value="0.0117"/>
+                                <input id="ATC_RAT_RLL_D" name="ATC_RAT_XXX_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_FLTT" name="ATC_RAT_XXX_FLTT" type="number" step="0.01" value="1.77"/>
+                                <input id="ATC_RAT_RLL_FLTT" name="ATC_RAT_XXX_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_FLTE" name="ATC_RAT_XXX_FLTE" type="number" step="0.01" value="0"/>
+                                <input id="ATC_RAT_RLL_FLTE" name="ATC_RAT_XXX_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_FLTD" name="ATC_RAT_XXX_FLTD" type="number" step="0.01" value="20"/>
+                                <input id="ATC_RAT_RLL_FLTD" name="ATC_RAT_XXX_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
                         </p>
         </fieldset>
         </td>
@@ -230,28 +231,28 @@ ArduPilot 4.2 filter setup.
         <fieldset style="width:580px">
                 <legend>Attitude Controller Notch Parameters</legend>
                         <p>
-                                <input id="ATC_RAT_RLL_NTF" name="ATC_RAT_RLL_NTF" type="number" step="1" value="1" style="width: 100px"/>
+                                <input id="ATC_RAT_RLL_NTF" name="ATC_RAT_RLL_NTF" type="number" step="1" value="1" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="NTF_FILT_FREQ" name="NTF_FILT_FREQ" type="number" step="0.1" value="150" style="width: 100px"/>
+                                <input id="NTF_FILT_FREQ" name="NTF_FILT_FREQ" type="number" step="0.1" value="150" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="NTF_FILT_Q" name="NTF_FILT_Q" type="number" step="0.1" value="75" style="width: 100px"/>
+                                <input id="NTF_FILT_Q" name="NTF_FILT_Q" type="number" step="0.1" value="75" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="NTF_FILT_ATT" name="NTF_FILT_ATT" type="number" step="0.1" value="40" style="width: 100px"/>
+                                <input id="NTF_FILT_ATT" name="NTF_FILT_ATT" type="number" step="0.1" value="40" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="ATC_RAT_RLL_NEF" name="ATC_RAT_RLL_NEF" type="number" step="1" value="1" style="width: 100px"/>
+                                <input id="ATC_RAT_RLL_NEF" name="ATC_RAT_RLL_NEF" type="number" step="1" value="1" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="NEF_FILT_FREQ" name="NEF_FILT_FREQ" type="number" step="0.1" value="150" style="width: 100px"/>
+                                <input id="NEF_FILT_FREQ" name="NEF_FILT_FREQ" type="number" step="0.1" value="150" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="NEF_FILT_Q" name="NEF_FILT_Q" type="number" step="0.1" value="75" style="width: 100px"/>
+                                <input id="NEF_FILT_Q" name="NEF_FILT_Q" type="number" step="0.1" value="75" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
-                                <input id="NEF_FILT_ATT" name="NEF_FILT_ATT" type="number" step="0.1" value="40" style="width: 100px"/>
+                                <input id="NEF_FILT_ATT" name="NEF_FILT_ATT" type="number" step="0.1" value="40" style="width: 100px" onchange = "calculate_freq_resp()"/>
                         </p>
         </fieldset>
         </td>
