--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -104,7 +104,7 @@ These params can then be saved and loaded into the autopilot without the need fo
                             </td>
                             <td>
                                 <input id="FFTWindow_per_batch" name="FFTWindow_per_batch" type="number" min="1" step="1" value="1" onchange="clear_calculation()" style="width:50px"/><br><br>
-                                <input id="FFTWindow_size" name="FFTWindow_size" type="number" min="1" step="1" value="1024" onchange="window_size_inc(event); clear_calculation()" style="width:50px"/>
+                                <input id="FFTWindow_size" name="FFTWindow_size" type="number" min="1" step="1" value="1024" onchange="fft_window_size_inc(event); clear_calculation()" style="width:50px"/>
                             </td>
                         </tr>
                     </table>
