--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -217,6 +217,9 @@ ArduPilot 4.2 filter setup.
                                 <input id="ATC_RAT_RLL_D" name="ATC_RAT_XXX_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
+                                <input id="ATC_RAT_RLL_D_FF" name="ATC_RAT_XXX_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
+                        </p>
+                        <p>
                                 <input id="ATC_RAT_RLL_FLTT" name="ATC_RAT_XXX_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
                         </p>
                         <p>
