--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -190,7 +190,7 @@ ArduPilot 4.2 filter setup.
 <fieldset style="max-width:1200px">
         <legend>Loop Rate</legend>
                 <p>
-                        <input id="SCHED_LOOP_RATE" name="SCHED_LOOP_RATE" type="number" step="1" value="400" data-paramValues="false"/>
+                        <input id="SCHED_LOOP_RATE" name="SCHED_LOOP_RATE" type="number" step="1" value="400" data-paramValues="false" onchange = "calculate_freq_resp()"/>
                 </p>
 </fieldset>
 
@@ -204,89 +204,89 @@ ArduPilot 4.2 filter setup.
                         </p>
                         <div id="RollPIDS" style="display:block">
                                 <p>
-                                        <input id="ATC_ANG_RLL_P" name="ATC_ANG_XXX_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_ANG_RLL_P" name="ATC_ANG_RLL_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_FF" name="ATC_RAT_XXX_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_FF" name="ATC_RAT_RLL_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_P" name="ATC_RAT_XXX_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_P" name="ATC_RAT_RLL_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_I" name="ATC_RAT_XXX_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_I" name="ATC_RAT_RLL_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_D" name="ATC_RAT_XXX_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_D" name="ATC_RAT_RLL_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_D_FF" name="ATC_RAT_XXX_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_D_FF" name="ATC_RAT_RLL_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
                                 </p>       
                                 <p>
-                                        <input id="ATC_RAT_RLL_FLTT" name="ATC_RAT_XXX_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_FLTT" name="ATC_RAT_RLL_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_FLTE" name="ATC_RAT_XXX_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_FLTE" name="ATC_RAT_RLL_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_RLL_FLTD" name="ATC_RAT_XXX_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_RLL_FLTD" name="ATC_RAT_RLL_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
                                 </p>
                         </div>
                         <div id="PitchPIDS" style="display:none">
                                 <p>
-                                        <input id="ATC_ANG_PIT_P" name="ATC_ANG_XXX_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_ANG_PIT_P" name="ATC_ANG_PIT_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_FF" name="ATC_RAT_XXX_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_FF" name="ATC_RAT_PIT_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_P" name="ATC_RAT_XXX_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_P" name="ATC_RAT_PIT_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_I" name="ATC_RAT_XXX_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_I" name="ATC_RAT_PIT_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_D" name="ATC_RAT_XXX_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_D" name="ATC_RAT_PIT_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_D_FF" name="ATC_RAT_XXX_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_D_FF" name="ATC_RAT_PIT_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
                                 </p>        
                                 <p>
-                                        <input id="ATC_RAT_PIT_FLTT" name="ATC_RAT_XXX_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_FLTT" name="ATC_RAT_PIT_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_FLTE" name="ATC_RAT_XXX_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_FLTE" name="ATC_RAT_PIT_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_PIT_FLTD" name="ATC_RAT_XXX_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_PIT_FLTD" name="ATC_RAT_PIT_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
                                 </p>
                         </div>
                         <div id="YawPIDS" style="display:none">
                                 <p>
-                                        <input id="ATC_ANG_YAW_P" name="ATC_ANG_XXX_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_ANG_YAW_P" name="ATC_ANG_YAW_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_FF" name="ATC_RAT_XXX_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_FF" name="ATC_RAT_YAW_FF" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_P" name="ATC_RAT_XXX_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_P" name="ATC_RAT_YAW_P" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_I" name="ATC_RAT_XXX_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_I" name="ATC_RAT_YAW_I" type="number" step="0.01" value="0.288" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_D" name="ATC_RAT_XXX_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_D" name="ATC_RAT_YAW_D" type="number" step="0.0001" value="0.0117" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_D_FF" name="ATC_RAT_XXX_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_D_FF" name="ATC_RAT_YAW_D_FF" type="number" step="0.0001" value="0.0" onchange = "calculate_freq_resp()"/>
                                 </p>        
                                 <p>
-                                        <input id="ATC_RAT_YAW_FLTT" name="ATC_RAT_XXX_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_FLTT" name="ATC_RAT_YAW_FLTT" type="number" step="0.01" value="1.77" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_FLTE" name="ATC_RAT_XXX_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_FLTE" name="ATC_RAT_YAW_FLTE" type="number" step="0.01" value="0" onchange = "calculate_freq_resp()"/>
                                 </p>
                                 <p>
-                                        <input id="ATC_RAT_YAW_FLTD" name="ATC_RAT_XXX_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
+                                        <input id="ATC_RAT_YAW_FLTD" name="ATC_RAT_YAW_FLTD" type="number" step="0.01" value="20" onchange = "calculate_freq_resp()"/>
                                 </p>
                         </div>
                 </fieldset>
